Bug 1603807 - Don't divide by zero in ClampAndAlignWithPixels. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D57188